# NeuroRAG

./: .env.example  .gitignore  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: 20260409_01_phase2_neon_pgvector.py
src/neurorag/: __init__.py
src/neurorag/agents/: __init__.py  base.py
src/neurorag/backend/: main.py
src/neurorag/backend/routes/: health.py
src/neurorag/common/: __init__.py  schemas.py
src/neurorag/config/: __init__.py  settings.py
src/neurorag/database/: __init__.py  models.py  session.py
src/neurorag/evaluation/: __init__.py  metrics.py
src/neurorag/frontend/: app.py
src/neurorag/ingestion/: __init__.py  docling_pipeline.py
src/neurorag/observability/: __init__.py  logging.py  metrics.py
src/neurorag/orchestration/: __init__.py  graph.py  state.py
src/neurorag/rag/: __init__.py  pipeline.py
tests/: test_database_models.py  test_database_startup.py  test_health.py  test_settings.py
